@@ -459,7 +459,8 @@ Sets the stroke color for graphics operations.
 
 [call [arg objectName] [method setLineStyle] [arg "width"] [arg "args"]]
 [call [arg objectName] [method line] [arg "x1"] [arg "y1"] [arg "x2"] [arg "y2"]]
-[call [arg objectName] [method qCurve] [arg "x1"] [arg "y1"] [arg "xc"] [arg "yc"] [arg "x2"] [arg "y2"]]
+[call [arg objectName] [method curve] [arg "x1"] [arg "y1"] [arg "x2"] [arg "y2"] [arg "x3"] [arg "y3"] [opt [arg "x4 y4"]]]
+Draw a quadratic (if three coordinates are given) or cubic bezier curve.
 [call [arg objectName] [method polygon] [opt [arg "x y"]...] [opt [arg "option value"]...]]
 [call [arg objectName] [method circle] [arg "x"] [arg "y"] [arg "radius"] [opt [arg "option value"]...]]
 [call [arg objectName] [method oval] [arg "x"] [arg "y"] [arg "radiusx"] [arg "radiusy"] [opt [arg "option value"]...]]
